[package]
name = "rust-20210328-ash-bincode-dxc-serde-winit"
version = "0.1.0"
authors = ["Mehmet Oguz Derin <mehmetoguzderin@mehmetoguzderin.com>"]
edition = "2018"

[dependencies]
ash = "0.32.0"
ash-window = "0.6.0"
bincode = "1.3.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
winit = { version = "0.24.0", features = ["serde"] }
